[gd_scene load_steps=3 format=2]

[ext_resource path="res://drugsList.gd" type="Script" id=1]
[ext_resource path="res://drugList.tscn" type="PackedScene" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 68.0

[node name="stats" type="GridContainer" parent="VBoxContainer/CenterContainer"]
editor/display_folded = true
margin_left = 398.0
margin_right = 625.0
margin_bottom = 68.0
custom_constants/hseparation = 13
columns = 4

[node name="cashLbl" type="Label" parent="VBoxContainer/CenterContainer/stats"]
margin_right = 46.0
margin_bottom = 14.0
text = "Cash:"

[node name="cashDisp" type="Label" parent="VBoxContainer/CenterContainer/stats"]
margin_left = 59.0
margin_right = 112.0
margin_bottom = 14.0
text = "$0"

[node name="gunsLbl" type="Label" parent="VBoxContainer/CenterContainer/stats"]
margin_left = 125.0
margin_right = 177.0
margin_bottom = 14.0
text = "Guns:"

[node name="gunsDisp" type="Label" parent="VBoxContainer/CenterContainer/stats"]
margin_left = 190.0
margin_right = 227.0
margin_bottom = 14.0
text = "0"

[node name="debtLbl" type="Label" parent="VBoxContainer/CenterContainer/stats"]
margin_top = 18.0
margin_right = 46.0
margin_bottom = 32.0
text = "Debt:"

[node name="debtDisp" type="Label" parent="VBoxContainer/CenterContainer/stats"]
margin_left = 59.0
margin_top = 18.0
margin_right = 112.0
margin_bottom = 32.0
text = "$3500"

[node name="bitchesLbl" type="Label" parent="VBoxContainer/CenterContainer/stats"]
margin_left = 125.0
margin_top = 18.0
margin_right = 177.0
margin_bottom = 32.0
text = "Bitches:"

[node name="bitchesDisp" type="Label" parent="VBoxContainer/CenterContainer/stats"]
margin_left = 190.0
margin_top = 18.0
margin_right = 227.0
margin_bottom = 32.0
text = "0"

[node name="spaceLbl" type="Label" parent="VBoxContainer/CenterContainer/stats"]
margin_top = 36.0
margin_right = 46.0
margin_bottom = 50.0
text = "Space:"

[node name="spaceDisp" type="Label" parent="VBoxContainer/CenterContainer/stats"]
margin_left = 59.0
margin_top = 36.0
margin_right = 112.0
margin_bottom = 50.0
text = "99 / 100"

[node name="bankLbl" type="Label" parent="VBoxContainer/CenterContainer/stats"]
margin_left = 125.0
margin_top = 36.0
margin_right = 177.0
margin_bottom = 50.0
text = "Bank:"

[node name="bankDisp" type="Label" parent="VBoxContainer/CenterContainer/stats"]
margin_left = 190.0
margin_top = 36.0
margin_right = 227.0
margin_bottom = 50.0
text = "$0"

[node name="healthLbl" type="Label" parent="VBoxContainer/CenterContainer/stats"]
margin_top = 54.0
margin_right = 46.0
margin_bottom = 68.0
text = "Health:"

[node name="healthDisp" type="Label" parent="VBoxContainer/CenterContainer/stats"]
margin_left = 59.0
margin_top = 54.0
margin_right = 112.0
margin_bottom = 68.0
text = "99"

[node name="dayLbl" type="Label" parent="VBoxContainer/CenterContainer/stats"]
margin_left = 125.0
margin_top = 54.0
margin_right = 177.0
margin_bottom = 68.0
text = "Day:"

[node name="dayDisp" type="Label" parent="VBoxContainer/CenterContainer/stats"]
margin_left = 190.0
margin_top = 54.0
margin_right = 227.0
margin_bottom = 68.0
text = "1 / 30"

[node name="list" parent="VBoxContainer" instance=ExtResource( 2 )]

[node name="PopupPanel" type="PopupPanel" parent="."]
visible = true
margin_right = 8.0
margin_bottom = 8.0

[node name="Label" type="Label" parent="PopupPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 66.0
margin_bottom = 18.0
text = "Buy coke:"
